--- a/3/3i/3ix/3ix.org.html
+++ b/3/3i/3ix/3ix.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 3ix.org privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620170033id_/http%3A//www.3ix.org/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 3ix.org privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220112821id_/http%3A//www.3ix.org/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>www.3ix.org - 3iX Networks  - Privacy Policy - Our commitment to protect your privacy</title>
@@ -213,6 +213,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
                           <p align="justify">We may use your personal information 
                             for credit worthiness check, statistical and marketing 
                             analysis purposes, and research and development purposes.</p>
+                            
+            <div id="nyb">
+            <a href="http://www.netyes.com/affordable_web_design.php" target="_blank">
+            <img src="http://www.3ix.org/images/ny/banner-ny-02.png" width="600" height="132" alt="web design"></a>
+            <a href="http://www.netyes.com/web_design_quote_form.php" target="_blank"><div id="wdq"><span style="display:none;">link</span></div></a>
+            </div>
+
+                            
                           <p align="justify"><strong><font color="#9999FF">How 
                             do we collect your Personal Information?</font></strong></p>
                           <p align="justify">We collect your personal information 
