--- a/g/ge/gen/geniuschargers.com.html
+++ b/g/ge/gen/geniuschargers.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the geniuschargers.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621002512id_/http%3A//www.geniuschargers.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geniuschargers.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220113459id_/http%3A//www.geniuschargers.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"><meta name="author" content="NOCO Genius Battery Chargers"><meta name="topic" content="Battery Chargers by NOCO Genius Wicked Smart Chargers"><meta name="classification" content="Battery Chargers"><meta name="distribution" content="Global"><meta name="language" content="en-us"><meta name="copyright" content="©2012 NOCO Genius, A NOCO Brand. All rights reserved"><meta name="rating" content="General"><meta name="audience" content="All"><meta name="doc-type" content="Web Page"><meta name="doc-class" content="Published"><meta name="designdevelop" content="NOCO Genius Battery Chargers"><title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"><head><meta charset="utf-8"><title>
 	Privacy Policy | Genius Battery Chargers
-</title><link rel="index" title="Genius Battery Chargers | Car, Motorcycle, Boat, Auto &amp; On-Board" href="http://www.geniuschargers.com/"><link rel="glossary" href="http://www.geniuschargers.com/products"><link rel="help" href="http://www.geniuschargers.com/support/faq"><link rel="copyright" href="http://www.geniuschargers.com/terms"><link rel="chapter" href="http://www.geniuschargers.com/downloads"><link href="/css/container.css" rel="stylesheet" type="text/css"><link href="/css/fonts.css" rel="stylesheet" type="text/css"><link href="/css/slider.css" rel="stylesheet" type="text/css"><link href="/css/style.css?v=1.2" rel="stylesheet" type="text/css">
+</title><meta property="og:title" content="NOCO Genius"><meta property="og:description" content="NOCO Genius designs and creates smart battery chargers that take performance and safety to a completely new level. Experience smart charging."><meta property="og:image" content="http://www.geniuschargers.com/images/logo.gif"><meta property="og:type" content="business"><meta property="og:url" content="http://www.geniuschargers.com/"><meta name="twitter:card" content="summary"><meta name="twitter:creator" content="wickedsmart"><meta name="twitter:domain" content="http://www.geniuschargers.com"><link rel="publisher" href="https://plus.google.com/u/0/b/106355162363751598851"><link rel="canonical" href="http://www.geniuschargers.com"><link href="/favicon.ico" rel="icon" type="image/x-icon"><link href="/css/container.css" rel="stylesheet" type="text/css"><link href="/css/fonts.css" rel="stylesheet" type="text/css"><link href="/css/slider.css" rel="stylesheet" type="text/css"><link href="/css/style.css?v=1.2" rel="stylesheet" type="text/css">
     
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/yahoo-dom-event.js" type="text/javascript"></script>
+    <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="/js/yahoo-dom-event.js" type="text/javascript"></script>
     <script src="/js/animation.js" type="text/javascript"></script>
     <script src="/js/container.js" type="text/javascript"></script>
     <script src="/js/connection.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
 <meta name="Description" content="The privacy policy for the NOCO Genius webpage.  Provides privacy information on how we track your use and when you make purchases on our website."><meta name="Title" content="Privacy Policy | Genius Battery Chargers">
 
     <form name="aspnetForm" method="post" action="privacy" id="aspnetForm">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJNjkzODcwNjcwD2QWAmYPZBYEAgEPZBYEAgwPFQEAZAIZDw8WAh4EVGV4dAVbPHNjcmlwdCB0eXBlPSJ0ZXh0L2phdmFzY3JpcHQiPnZhciBnVVJsPSJ3d3cuZ2VuaXVzY2hhcmdlcnMuY29tIjsgdmFyIGdSQyA9IGZhbHNlOzwvc2NyaXB0PmRkAgMPZBYEZg8WAh4HVmlzaWJsZWhkAgMPFgIfAWhkZCB5Hlb/ZDq4dBFEMX0RWdU/r4zZ38KZOCTYF/9nQivm">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJNjkzODcwNjcwD2QWAmYPZBYEZg9kFgQCAQ8VAQBkAhQPDxYCHgRUZXh0BVs8c2NyaXB0IHR5cGU9InRleHQvamF2YXNjcmlwdCI+dmFyIGdVUmw9Ind3dy5nZW5pdXNjaGFyZ2Vycy5jb20iOyB2YXIgZ1JDID0gZmFsc2U7PC9zY3JpcHQ+ZGQCAQ9kFgRmDxYCHgdWaXNpYmxlaGQCAw8WAh8BaGRkOjzpMbdhUEKp3It8DT5lFuoqADyk35n+EYHBxwNM/bI=">
 
     <div>        
         
@@ -309,7 +309,7 @@ You may correct some personal and account information maintained in your Account
 
     (function () {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(ga, s);
     })();
@@ -335,7 +335,7 @@ You may correct some personal and account information maintained in your Account
         }());
  </script>
  
-
+<script type="text/javascript" src="//tags.mediaforge.com/js/1516"></script>
 
 
 </body></html>
