--- a/d/da/dav/davedraper.com.html
+++ b/d/da/dav/davedraper.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the davedraper.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620222521id_/http%3A//www.davedraper.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the davedraper.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220113540id_/http%3A//www.davedraper.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- #BeginTemplate "/Templates/draper_template_working.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" -->
@@ -67,12 +67,17 @@
 	<p class="nav_links">
 	  <a href="http://www.davedraper.com/dave-draper-bio.html">Dave Draper Bio</a><br>
           <a href="http://www.davedraper.com/bodybuilding-history-contents.html">Dave's History</a><br>
-          <a href="http://www.davedraper.com/dave-draper-columns.html">Weekly Draper Column</a><br>
-          <a href="http://www.davedraper.com/mag-muscle-contents.html">Articles about Dave</a><br>
-          <a href="http://www.davedraper.com/mag-cover-archive.html">Dave's Covershots</a><br>
-          <a href="http://www.davedraper.com/photo-archive-intro.html">Draper Photo Gallery</a><br>
-          <a href="http://www.davedraper.com/draper-biceps-shots.html">Bomber's Biceps</a><br>
-</p>
+    <a href="http://www.davedraper.com/dave-draper-columns.html">Draper Column</a><br>
+	  <a href="http://www.davedraper.com/mag-muscle-contents.html">Articles about Dave</a><br>
+	  <a href="http://www.davedraper.com/mag-cover-archive.html">Dave's Covershots</a><br>
+	  <a href="http://www.davedraper.com/photo-archive-intro.html">Draper Photo Gallery</a><br>
+    <a href="http://www.davedraper.com/draper-biceps-shots.html">Bomber's Biceps</a><br><br>
+	<a href="http://www.davedraper.com/draper-newsletter.html">Newsletter</a><br>
+	<a href="http://www.davedraper.com/fitness_products/product/SBB.html">	  Bomber Blend</a><br>
+	<a href="http://www.davedraper.com/fitness_products/product/TTS.html"> Top Squat</a><br>
+	<a href="http://www.davedraper.com/fitness_products/category/B.html">	  Dave's Books
+	  </a><br>
+    </p>
 	<h3 class="nav_header">Jumpstart Your Workouts</h3>
 	<p class="nav_links">
 	  <a href="http://www.davedraper.com/keys-to-bodybuilding.html">Six Keys to Bodybuilding</a><br>
