--- a/c/ca/cal/calastrology.com.html
+++ b/c/ca/cal/calastrology.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the calastrology.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621020953id_/http%3A//www.calastrology.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the calastrology.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220113617id_/http%3A//www.calastrology.com/privacypolicy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><script type="text/javascript" async="" src="//np.lexity.com/embed/YA/9faede7e42676e87de6681eae3270fb5?id=7e1613459892"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript"> 
  <!-- 
  (new Image).src="http://store.yahoo.net/cgi-bin/refsd?e=http://www.calastrology.com/privacypolicy.html&h=www.calastrology.com&v=1.0&dr=" + escape(document.referrer); 
  --> 
@@ -27,7 +27,15 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-<!-- END OF GOOGLE ANALYTICS --></head><body bgcolor="ffffcc" background="http://ep.yimg.com/ca/I/calastrology_2262_0"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr valign="top"><td><br><div id="navimg"><map name="ee2751b7cc37381"><area shape="rect" coords="0,0,180,130" href="index.html"><area shape="rect" coords="0,130,180,192" href="spells.html"><area shape="rect" coords="0,192,180,220" href="blazing-fast-spells.html"><area shape="rect" coords="0,220,180,248" href="gypsy-spells.html"><area shape="rect" coords="0,248,180,276" href="voodoospells.html"><area shape="rect" coords="0,276,180,316" href="relationship-doctor-spells.html"><area shape="rect" coords="0,316,180,366" href="good-luck-charms.html"><area shape="rect" coords="0,366,180,394" href="wangadolls.html"><area shape="rect" coords="0,394,180,422" href="spellkits.html"><area shape="rect" coords="0,422,180,450" href="voodoo.html"><area shape="rect" coords="0,450,180,478" href="sterling-silver-jewelry.html"><area shape="rect" coords="0,478,180,528" href="asread.html"><area shape="rect" coords="0,528,180,556" href="octology-forecast.html"><area shape="rect" coords="0,556,180,584" href="zodiac-spells.html"><area shape="rect" coords="0,584,180,612" href="love.html"><area shape="rect" coords="0,612,180,640" href="money.html"><area shape="rect" coords="0,640,180,688" href="ourguarantee.html"><area shape="rect" coords="0,688,180,716" href="testimonials.html"><area shape="rect" coords="0,716,180,744" href="about.html"><area shape="rect" coords="0,744,180,776" href="faq.html"><area shape="rect" coords="0,776,180,816" href="http://order.store.yahoo.net/calastrology/cgi-bin/wg-order?calastrology"></map><img src="http://ep.yimg.com/ca/I/calastrology_2262_28974" width="180" height="816" usemap="#ee2751b7cc37381" border="0" hspace="0" vspace="0" ismap=""></div><br><div class="navsearchwrapper">
+<!-- END OF GOOGLE ANALYTICS --></head><body bgcolor="ffffcc" background="http://ep.yimg.com/ca/I/calastrology_2268_0"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr valign="top"><td><!-- <div style="margin:5px 0 10px 5px; border: 2px solid red; background-color: #FFF;padding:5px;text-align:center;width:153px;font-family:'Georgia','Times New Roman','Times',serif;">
+<div style="font-weight:bold;font-size:95%;margin-bottom:10px;">Today only! Get a free <a href="samadhi.html">Samadhi</a> with any other purchase!</div>
+<div style="font-size:80%">Just add the <a href="samadhi.html">Samadhi</a> to your shopping cart, along with any other item or spell.
+<br>
+Use coupon code <b>SaturdaySamadhi</b> during checkout. 
+<br><br>
+<i>Valid August 3 only!</i></div>
+</div>
+--><br><div id="navimg"><map name="17a852b35cc84a6"><area shape="rect" coords="0,0,180,130" href="index.html"><area shape="rect" coords="0,130,180,192" href="spells.html"><area shape="rect" coords="0,192,180,220" href="blazing-fast-spells.html"><area shape="rect" coords="0,220,180,248" href="gypsy-spells.html"><area shape="rect" coords="0,248,180,276" href="voodoospells.html"><area shape="rect" coords="0,276,180,316" href="relationship-doctor-spells.html"><area shape="rect" coords="0,316,180,366" href="good-luck-charms.html"><area shape="rect" coords="0,366,180,394" href="wangadolls.html"><area shape="rect" coords="0,394,180,422" href="spellkits.html"><area shape="rect" coords="0,422,180,450" href="voodoo.html"><area shape="rect" coords="0,450,180,478" href="sterling-silver-jewelry.html"><area shape="rect" coords="0,478,180,528" href="asread.html"><area shape="rect" coords="0,528,180,556" href="octology-forecast.html"><area shape="rect" coords="0,556,180,584" href="zodiac-spells.html"><area shape="rect" coords="0,584,180,612" href="love.html"><area shape="rect" coords="0,612,180,640" href="money.html"><area shape="rect" coords="0,640,180,688" href="ourguarantee.html"><area shape="rect" coords="0,688,180,716" href="client-testimonials.html"><area shape="rect" coords="0,716,180,744" href="about.html"><area shape="rect" coords="0,744,180,776" href="faq.html"><area shape="rect" coords="0,776,180,816" href="http://order.store.yahoo.net/calastrology/cgi-bin/wg-order?calastrology"></map><img src="http://ep.yimg.com/ay/calastrology/what-our-clients-are-saying-21.gif" width="180" height="816" usemap="#17a852b35cc84a6" border="0" hspace="0" vspace="0" ismap=""></div><br><div class="navsearchwrapper">
 <form name="products">
 <select style="font-size:11px;color:#333300;font-family:verdana;background-color:#ffffff;" name="menu" onchange="location=document.products.menu.options[document.products.menu.selectedIndex].value;">
 <option value="">I'm looking for...</option>
@@ -69,14 +77,14 @@
 <option value="http://www.calastrology.com/coupons.html">Coupons</option>
 </select>
 </form>
-</div><br><br>
-<!-- SCANALERT -->
+</div><br><!-- SCANALERT -->
 <div align="center">
 <a target="_blank" href="//www.scanalert.com/RatingVerify?ref=www.calastrology.com"><img width="94" height="54" border="0" src="//images.scanalert.com/meter/www.calastrology.com/13.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE  is a Trademark of ScanAlert'); return false;"></a>
 <br><br>
 <!-- YAHOO BADGE -->
 <a href="http://smallbusiness.yahoo.com/ecommerce/" target="_blank"><img src="http://us.i1.yimg.com/us.yimg.com/i/us/smallbiz/gr/ecomby_128bit.gif" width="118" height="55" border="0" align="middle" alt="ecommerce provided by Yahoo! Small Business"></a>
-</div></td><td><img src="http://ep.yimg.com/ca/Img/trans_1x1.gif" height="1" width="26" border="0"></td><td><a href="index.html"><img src="http://ep.yimg.com/ca/I/calastrology_2262_107476" width="0" height="5" border="0" hspace="0" vspace="0"></a><br><br><table border="0" cellspacing="0" cellpadding="0" width="734"><tbody><tr valign="top"><td><center></center><font size="2" face="arial, helvetica, sans-serif"><img src="http://ep.yimg.com/ca/I/calastrology_2264_15884334" width="400" height="37" border="0" hspace="0" vspace="0"><br><br>
+</div>
+</td><td><img src="http://ep.yimg.com/ca/Img/trans_1x1.gif" height="1" width="26" border="0"></td><td><a href="index.html"><img src="http://ep.yimg.com/ca/I/calastrology_2268_83329" width="0" height="5" border="0" hspace="0" vspace="0"></a><br><br><table border="0" cellspacing="0" cellpadding="0" width="734"><tbody><tr valign="top"><td><center></center><font size="2" face="arial, helvetica, sans-serif"><img src="http://ep.yimg.com/ca/I/calastrology_2272_16345197" width="400" height="37" border="0" hspace="0" vspace="0"><br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td width="110" valign="top">
@@ -144,49 +152,49 @@ If you would like to be removed from our <b>email</b> newsletter mailing list, p
 csell_env = 'bf1';
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
- </script><script type="text/javascript" src="http://d.yimg.com/mi/ywa.js">
+// Begin Yahoo Store Generated Code
+ </script> <script type="text/javascript" src="http://d.yimg.com/mi/ywa.js">
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
-var analytics_token_map = {}; analytics_token_map['TOK_ENTRY_DOMAIN'] = ''; analytics_token_map['TOK_DOCGROUP'] = 'Store'; analytics_token_map['TOK_STATS_URL'] = 'http://a.analytics.yahoo.com/p.pl?a=1000'; analytics_token_map['TOK_COOKIE_PATH'] = ''; analytics_token_map['TOK_PROJECT_ID'] = '1171874426'; analytics_token_map['TOK_DOCNAME'] = 'PrivacyPolicy'; analytics_token_map['TOK_OTHER_DOMAINS'] = '*.store.yahoo.net,*.yhs4.search.yahoo.com';  YStore = window.YStore||{};YStore.itatm = analytics_token_map;YWATracker = YWA.getTracker('1000'+YStore.itatm['TOK_PROJECT_ID']);YWATracker.setDocumentName(YStore.itatm['TOK_DOCNAME']);YWATracker.setDocumentGroup(YStore.itatm['TOK_DOCGROUP']);YWATracker.setDomains(YStore.itatm['TOK_OTHER_DOMAINS']);YWATracker.setCookiePath(YStore.itatm['TOK_COOKIE_PATH']);
+// Begin Yahoo Store Generated Code
+var analytics_token_map = {}; analytics_token_map['TOK_ENTRY_DOMAIN'] = ''; analytics_token_map['TOK_DOCGROUP'] = 'Store'; analytics_token_map['TOK_STATS_URL'] = 'http://a.analytics.yahoo.com/p.pl?a=1000'; analytics_token_map['TOK_COOKIE_PATH'] = ''; analytics_token_map['TOK_PROJECT_ID'] = '1171874426'; analytics_token_map['TOK_DOCNAME'] = 'PrivacyPolicy'; analytics_token_map['TOK_OTHER_DOMAINS'] = '*.store.yahoo.net,*.yhs4.search.yahoo.com';  YStore = window.YStore||{}; YStore.itatm = analytics_token_map; YWATracker = YWA.getTracker('1000'+YStore.itatm['TOK_PROJECT_ID']); YWATracker.setDocumentName(YStore.itatm['TOK_DOCNAME']); YWATracker.setDocumentGroup(YStore.itatm['TOK_DOCGROUP']); YWATracker.setDomains(YStore.itatm['TOK_OTHER_DOMAINS']); YWATracker.setCookiePath(YStore.itatm['TOK_COOKIE_PATH']);
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
+// Begin Yahoo Store Generated Code
 function analytics_BEACON() {  YWATracker.submit(); } 
 </script>
 <script type="text/javascript">
 analytics_BEACON(); </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
- </script><script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script><script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
+// Begin Yahoo Store Generated Code
+ </script> <script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
+// Begin Yahoo Store Generated Code
  csell_page_data = {}; csell_page_rec_data = []; ts='TOK_STORE_ID';
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
+// Begin Yahoo Store Generated Code
 function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'calastrology'; csell_token_map['TOK_URL'] = 'http://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+t['TOK_ORDER_HOST']+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
+// Begin Yahoo Store Generated Code
 function csell_REC_VIEW_TAG() {  var env = (typeof csell_env == 'string')?csell_env:'prod'; var p = csell_page_data; var a = '/sid='+p['si']+'/io='+p['io']+'/ii='+p['ii']+'/bt='+p['bt']+'-view'+'/en='+env; var r=Math.random(); YStore.CrossSellBeacon.renderBeaconWithRecData(p['url']+'/p/s='+p['s']+'/'+p['rnd']+'='+r+a); } 
 </script>
 <script type="text/javascript">
-// Begin Y! Store Generated Code
-var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://calastrology.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS'];</script><script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script><script type="text/javascript">
+// Begin Yahoo Store Generated Code
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://calastrology.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script> <script type="text/javascript">
 </script>
 <script type="text/javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=51c3b71d&catalog=calastrology&r=" + escape(document.referrer) + "&v=1"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=52b42cdd&catalog=calastrology&r=" + escape(document.referrer) + "&v=1"; }
  // --> 
  </script><script type="text/javascript"> 
  <!-- 
  if (document.referrer && (document.referrer!='') && window.Image) 
  { 
- (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=51c3b71d&catalog=calastrology&r=" + escape(document.referrer) + "&v=3"; }
+ (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=52b42cdd&catalog=calastrology&r=" + escape(document.referrer) + "&v=3"; }
  // --> 
- </script><script type="text/javascript">try {var YWAGTracker = YWA.getTracker("10001849413879", "VSCALE4");YWAGTracker.setDocumentName("SPAGE");YWAGTracker.setDocumentGroup("YSBE");YWAGTracker.setCF(7, "calastrology");YWAGTracker.setCF(8, "e9");YWAGTracker.submit();} catch (eYWATCUnavailable) {}</script></body></html>
+ </script><script type="text/javascript">try {var YWAGTracker = YWA.getTracker("10001849413879", "VSCALE4");YWAGTracker.setDocumentName("SPAGE");YWAGTracker.setDocumentGroup("YSBE");YWAGTracker.setCF(7, "calastrology");YWAGTracker.setCF(8, "e9");YWAGTracker.submit();} catch (eYWATCUnavailable) {}</script><script type="text/javascript">(function (d, w) { var x = d.getElementsByTagName('SCRIPT')[0]; var f = function () { var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/9faede7e42676e87de6681eae3270fb5?id=7e1613459892'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
