--- a/r/ro/roa/roanoke.edu.html
+++ b/r/ro/roa/roanoke.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the roanoke.edu privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621001540id_/http%3A//roanoke.edu/x28182.xml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the roanoke.edu privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220114355id_/http%3A//roanoke.edu/x28182.xml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <title>Privacy Policy - Roanoke College - Salem, Virginia</title><base href="http://roanoke.edu/"><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0011/3022.js?439008" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" language="javascript"><!--
@@ -35,6 +35,8 @@
 <script type="text/javascript" src="Prebuilt/js/jquery.js"></script>
 <script type="text/javascript" src="Prebuilt/js/global.js"></script>
 <script type="text/javascript" src="Prebuilt/js/jump.js"></script>
+<script type="text/javascript" src="Prebuilt/js/jquery.sticky.js"></script>
+<script type="text/javascript" src="Prebuilt/js/navBar.js"></script>
 <script src="prebuilt/js/mobile-cookies.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -51,7 +53,7 @@
 				  })();
 				
 				</script>
-<script type="text/javascript" src="https://pf-cdn.printfriendly.com/ssl/main.js"></script></head>
+<script type="text/javascript" src="https://pf-cdn.printfriendly.com/ssl/main.js"></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 <body>
 <div id="page-area">
 <div id="content-area-outer-wrapper"><div id="ca-outer-left"><div id="ca-outer-right">
@@ -115,6 +117,23 @@
 </div>
 </div>
 </div>
+<script type="text/javascript">
+		adroll_adv_id = "TDVUVL3RIZB7HANMY5TH3R";
+		adroll_pix_id = "RJDSDT7GDRD23G5COC7ZFA";
+		(function () {
+		var oldonload = window.onload;
+		window.onload = function(){
+		   __adroll_loaded=true;
+		   var scr = document.createElement("script");
+		   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+		   scr.setAttribute('async', 'true');
+		   scr.type = "text/javascript";
+		   scr.src = host + "/j/roundtrip.js";
+		   ((document.getElementsByTagName('head') || [null])[0] ||
+		    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+		   if(oldonload){oldonload()}};
+		}());
+		</script>
 <script type="text/javascript">
 		setTimeout(function(){var a=document.createElement("script");
 		var b=document.getElementsByTagName("script")[0];
